More media queries to fix layout on small screens - mostly blog date and cusdis authorline

--- a/arise-source/css/main.css
+++ b/arise-source/css/main.css
@@ -124,6 +124,16 @@ h1 {
   box-shadow:.5rem .5rem 0 #000,inset 0 0 0 0.2rem var(--lightblue);
   border:0.4rem solid var(--darkgrey)
 }
+@media screen and (max-width:500px) {
+  h1 {
+    max-width:100%;
+  }
+}
+@media screen and (min-width:501px) {
+  h1 {
+    max-width:46%;
+  }
+}
 
 tr:nth-child(odd) {
   background-color:var(--darkgrey)
@@ -305,12 +315,25 @@ tr:hover {
 }
 @media screen and (max-width:500px) {
   .cmt-author-line {
-    height:7rem;
-    display:grid;
+    height:3.8rem;
+    display:inline-block;
   }
-  .cmt-author, .cmt-date, .cmt-mod {
+  .cmt-author, .cmt-mod {
     font-size:0.7rem;
-    float:inherit;
+    line-height:0.5rem;
+    float:inline-start;
+  }
+  .cmt-mod {
+    float: inline-start;
+  }
+  .cmt-date {
+    font-size:0.7rem;
+    line-height:0.5rem;
+    
+  }
+  .cmt-message p {
+    font-size:0.8rem;
+    min-height: 4rem;
   }
 }
 @media screen and (min-width:501px) {
@@ -322,6 +345,13 @@ tr:hover {
     font-size:0.7rem;
     float:inline-end;
   }
+  .cmt-mod {
+  float:inline-start;
+  }
+  .cmt-message p {
+    font-size:0.8rem;
+    min-height: 3rem;
+  }
 }
 .cmt-author {
 
@@ -329,7 +359,6 @@ tr:hover {
 }
 .cmt-mod {
   width:fit-content;
-  float:inline-start;
   color:var(--red);
   display:block;
   background-color:var(--bgblack);
@@ -369,10 +398,6 @@ tr:hover {
   content:"MESSAGE: ";
   color:var(--red);
   font-size:0.9rem;
-}
-.cmt-message p {
-  font-size:0.8rem;
-  min-height: 3rem;
 }
 .grid-cols-2 {
   width:100%;
